plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.8'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.pstracker'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
    // Basic Starters
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'

    // QueryDSL
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'

    // OAuth2 & Firebase
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'com.google.firebase:firebase-admin:9.2.0'

    // Caffeine Cache
    // 캐시 추상화 및 CaffeineCacheManager 지원
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    // Caffeine 캐시 구현체
    implementation 'com.github.ben-manes.caffeine:caffeine'

    // DB Driver
    runtimeOnly 'com.mysql:mysql-connector-j'

    // Lombok & Processors
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'com.h2database:h2'
}

// QueryDSL QClass가 생성될 경로를 지정합니다. (빌드 시 자동 생성됨)
def querydslDir = "$buildDir/generated/querydsl"

sourceSets {
    main.java.srcDirs += [ querydslDir ]
}

tasks.withType(JavaCompile) {
    options.getGeneratedSourceOutputDirectory().set(file(querydslDir))
}

clean.doLast {
    file(querydslDir).deleteDir()
}

tasks.named('test') {

    useJUnitPlatform()

    systemProperty 'spring.profiles.active', 'test'

    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat "full"
    }
}

// 'bootJar' (Fat Jar)만 만들고, 'plain.jar' (Thin Jar)는 만들지 않도록 설정
jar {
    enabled = false
}
